// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Table Brand {
    id INTEGER [primary key]
    name VARCHAR 
    origin_country VARCHAR 
    description VARCHAR 
    }

Table Cart {
    id INTEGER [primary key]
    customer_id INTEGER 
    created_at DATETIME 
    }

Table Customer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    email VARCHAR 
    phone VARCHAR 
    address VARCHAR 
    }

Table CartItem {
    id INTEGER [primary key]
    cart_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    price FLOAT 
    size INTEGER 
    category_id INTEGER 
    brand_id INTEGER 
    stock INTEGER 
    description VARCHAR 
    }

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    }

Table Coupon {
    id INTEGER [primary key]
    code VARCHAR 
    discount_percentage FLOAT 
    expiry_date DATETIME 
    description VARCHAR 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    date_ordered DATETIME 
    total_amount FLOAT 
    status VARCHAR 
    }

Table OrderDetail {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    }

Table Payment {
    id INTEGER [primary key]
    order_id INTEGER 
    payment_date DATETIME 
    amount FLOAT 
    payment_method VARCHAR 
    }

Table Review {
    id INTEGER [primary key]
    product_id INTEGER 
    customer_id INTEGER 
    rating INTEGER 
    comment VARCHAR 
    review_date DATETIME 
    }

Table Wishlist {
    id INTEGER [primary key]
    customer_id INTEGER 
    name VARCHAR 
    created_at DATETIME 
    }

Table WishlistItem {
    id INTEGER [primary key]
    wishlist_id INTEGER 
    product_id INTEGER 
    }



// Relationships
    Ref: Cart.(customer_id) < Customer.(id)
    Ref: CartItem.(cart_id) < Cart.(id)
    Ref: CartItem.(product_id) < Product.(id)
    Ref: Product.(brand_id) < Brand.(id)
    Ref: Product.(category_id) < Category.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderDetail.(order_id) < Order.(id)
    Ref: OrderDetail.(product_id) < Product.(id)
    Ref: Payment.(order_id) < Order.(id)
    Ref: Review.(customer_id) < Customer.(id)
    Ref: Review.(product_id) < Product.(id)
    Ref: Wishlist.(customer_id) < Customer.(id)
    Ref: WishlistItem.(product_id) < Product.(id)
    Ref: WishlistItem.(wishlist_id) < Wishlist.(id)
